tests/NormalTests/paczka1/fuzzy1/28656849.err
Error in line 23: XgRqSB0a A590 50,54
Error in line 27: 8oQLT S289 80,2
Error in line 21: hF7EucuA S289 114,0
